k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seorank-web
  namespace: seorank
spec:
  replicas: 2
  selector:
    matchLabels:
      app: seorank-web
  template:
    meta
      labels:
        app: seorank-web
    spec:
      containers:
        - name: web
          image: cr.yandex/b1g35vjdqoa8lovnn8f6/seorank:PLACEHOLDER
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 60
