k8s/app-service.yaml
apiVersion: v1
kind: Service
meta
  name: seorank-web
  namespace: seorank
spec:
  selector:
    app: seorank-web
  ports:
    - port: 80
      targetPort: 5000
